--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,33 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+Docs/build
+Docs/Source
+Trash
+External_Integration/Pythia/pythia8312
+External_Integration/Pythia/pythia8312.tar.gz
+External_Integration/Pythia/pythia8315
+External_Integration/Pythia/pythia8315.tar.gz
+External_Integration/HepMC3/HepMC3-3.2.6
+External_Integration/HepMC3/hepmc3-build
+External_Integration/HepMC3/hepmc3-install
+External_Integration/HepMC3/HepMC3-3.2.6.tar.gz
+External_Integration/MadGraph/MG5_aMC_v2_9_20
+External_Integration/MadGraph/MG5_aMC_v3_5_8
+External_Integration/Marty/MARTY_INSTALL/*
+External_Integration/Marty/src/*
+Assets/MARTY/MartyTemp/*
+Assets/MadGraph/MadGraphTemp/*
+output_*
+outputs*
+pythia_
+db/Temp
+.coverage
+pythia_config.cmnd
+__pycache__/
+Logs/
+**/__pycache__
+**/NeoSetAnubis.egg-info
+db/EventsStorage
